// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1 expense correctly 1`] = `
<div>
  <h3>
    Expenses Summary
  </h3>
  <p>
    Viewing 1 expense totalling $1.95
  </p>
</div>
`;

exports[`should render ExpensesSummary correctly 1`] = `
<div>
  <h3>
    Expenses Summary
  </h3>
  <p>
    Viewing 3 expenses totalling $1,141.95
  </p>
</div>
`;

exports[`should render multiple expenses correctly 1`] = `
<div>
  <h3>
    Expenses Summary
  </h3>
  <p>
    Viewing 3 expenses totalling $1,141.95
  </p>
</div>
`;
